--- a/cadastroAlunos.html
+++ b/cadastroAlunos.html
@@ -5,9 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sistema de Cadastros - Fatec Franca</title>
+    <!--Link para conexão com o Bootstrap-->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+    <!--Link para conexão com o framework Vue-->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+  <!--Código em CSS interno responsável pela estilização-->
   <style>
     .modal-mask {
       position: fixed;
