--- a/dashboard.html
+++ b/dashboard.html
@@ -15,6 +15,7 @@
     </header>
     <main>
       <div class="container">
+        <!--Botões que levam o usuário de uma página para outra-->
         <button @click="goToCadastroAlunos">Cadastro de Alunos</button>
         <button @click="goToBuscaAlunos">Busca de Alunos</button>
       </div>
