--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <div class="container" >
     <a class="links" id="paralogin"></a>
     <a class="links" id="paracadastro"></a>  
-  
+    <!--Imagem do Logo da Fatec-->
     <img src="https://site.fatecfranca.edu.br/images/logo-fatec-franca-15-anos.png" width=20% height=20%
     alt="logo fatec"><br /><br />
     
- 
     <div class="content">   
          <strong>Busca de Alunos</strong>
       <!--FORMULÁRIO DE LOGIN-->
