--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body>
-  <div class="container" >
+  <div class="container" > <!-- Início do Container principal-->
     <a class="links" id="paralogin"></a>
     <a class="links" id="paracadastro"></a>  
     <!--Imagem do Logo da Fatec-->
